Yeah CBF commenting. Finished Module 3 mostly.

--- a/3 Flow Control/3.2 Loops.md
+++ b/3 Flow Control/3.2 Loops.md
@@ -14,12 +14,13 @@ ___
 - [Loop Exercises](#loop-exercises)
 
 
-[Code](/XXCode%20Snips/3.2.2%20Loops%20Practice.py) for loops practice.  
-[Code](/XXCode%20Snips/3.2.3%20FizzBuzz.py) for Ye Olde FizzBuzz!  
-[Code](/XXCode%20Snips/3.2.4%20Nested%20Loops%20Excercises.py) for nested loops  
-[Code](/XXCode%20Snips/3.2.5%20Matrix%20and%20List%20Comprehension.py) for matrix and list comprehension stuff  
+*[Code](/XXCode%20Snips/3.2.2%20Loops%20Practice.py) for loops practice.*  
+*[Code](/XXCode%20Snips/3.2.3%20FizzBuzz.py) for Ye Olde FizzBuzz!*  
+*[Code](/XXCode%20Snips/3.2.4%20Nested%20Loops%20Excercises.py) for nested loops*  
+*[Code](/XXCode%20Snips/3.2.5%20Matrix%20and%20List%20Comprehension.py) for matrix and list* comprehension stuff  
 
 ## Range  
+
 The `range()` function is particlarly useful for loops as it generates a sequence of numbers. These can be defined by `range(<start*>, <stop +1>,<step*>)`  
 **Note:** start and step parameters are optional.
 ```py
@@ -37,6 +38,7 @@ Will Output:
 
 ___
 ## Loops in Python
+
 Loops are used to perform repeated operations. Python provides two main types of loops:
 * **For loops:** Used for a predetermined number of iterations, iterating over sequences like lists or ranges.
 * **While loops:** Used for repeated execution based on a condition.
@@ -50,10 +52,12 @@ Loops are used to perform repeated operations. Python provides two main types of
 
 ___
 ### For Loops
+
 For loops iterate over a sequence, such as a list, range, or tuple. The `for` loop makes it possible to execute a code block multiple times if the number of times is known or defined.
 
 ___
 #### Basic Syntax
+
 `for` loops iterate over a sequence, such as a list, range, or tuple:
 ```py
 for i in range(5):
@@ -84,6 +88,7 @@ green
 
 ___
 #### Iteration
+
 For loops can be used to modify lists throught iteration:
 ```py
 squares = ['red', 'yellow', 'green', 'purple', 'blue']
@@ -110,6 +115,7 @@ After square  4 is white
 
 ___
 #### Enumerating Lists
+
 The `enumerate()` function will access both the index and the value in a list.
 ```py
 colours=['red', 'yellow', 'green', 'purple', 'blue']
@@ -129,10 +135,12 @@ Index: 4, Value: blue
 
 ___
 ### While Loops
+
 The `while` loop exists as a tool for repeated execution based on a condition. The code block will keep being executed until the given logical condition returns a **False** boolean value.
 
 ___
 #### Basic Syntax
+
 While loops execute until a condition becomes False:
 ```py
 count = 0
@@ -176,6 +184,7 @@ It took  2 repetitions to get out of loop.
 
 ___
 #### Breaking Loops
+
 Break can be used to exit a loop prematurely where necessary, this is especially useful for [exception handling](/3%20Control%20Flow/3.5%20Exception%20Handling.md)
 ```py
 colors = ['red', 'red', 'purple', 'orange']
@@ -195,6 +204,7 @@ Will output:
 
 ___
 ## Loop Exercises
+
 **Exercise 1:**  
 Using a for loop print the multiplication table of 6:
 
@@ -221,7 +231,8 @@ Will output:
 </details>
 
 ___
-**Exercise 2:**  
+**Exercise 2:** 
+
 Filter orange items from a list until encountering a non-orange item:
 
 <details><summary>Click here for the solution</summary>
@@ -244,6 +255,7 @@ Will output:
 
 ___
 **Exercise 3:**  
+
 Write a `for` loop the prints out all the elements between `-5` and `5` using the range function.
 
 <details><summary>Click here for the solution</summary>
@@ -269,6 +281,7 @@ Will output:
 
 ___
 **Exercise 4:**  
+
 Print the elements of the following list:
 `Genres=[ 'rock', 'R&B', 'Soundtrack', 'R&B', 'soul', 'pop']`
 
@@ -293,6 +306,7 @@ pop
 
 ___
 **Exercise 5:**  
+
 Write a while loop to display the values of the Rating of an album playlist stored in the list `PlayListRatings`. If the score is less than 6, exit the loop. The list `PlayListRatings` is given by: `PlayListRatings = [10, 9.5, 10, 8, 7.5, 5, 10, 10]`
 
 <details><summary>Click here for the solution</summary>
@@ -319,6 +333,7 @@ Will output:
 
 ___
 **Exercise 6:**  
+
 Write a while loop to copy the strings `'orange'` of the list `squares` to the list `new_squares`. Stop and exit the loop if the value on the list is not `'orange'`:  
 `squares = ['orange', 'orange', 'purple', 'blue ', 'orange']`  
 `new_squares = []`  
@@ -343,6 +358,7 @@ Will output:
 
 ___
 **Exercise 7:**  
+
 Your little brother has just learned multiplication tables in school. Today he has learned tables of 6 and 7. Help him memorise both the tables by printing them using `for` loop.
 
 <details><summary>Click here for the solution</summary>
@@ -385,6 +401,7 @@ Multiplication table of 7:
 
 ___
 **Exercise 8:**  
+
 The following is a list of animals in a National Zoo.  
 `Animals = ["lion", "giraffe", "gorilla", "parrots", "crocodile","deer", "swan"]`  
 Your brother needs to write an essay on the animals whose names are made of 7 letters. Help him find those animals through a `while` loop and create a separate list of such animals.
@@ -411,6 +428,7 @@ Will output:
 
 ___
 **Exercise 9:**  
+
 Create a script that takes a user's input for a number and prints the multiplication table for that number from 1 to 12. Use a loop to accomplish this.  
 [Code](/XXCode%20Snips/3.2.1%20Multiplication%20Loop.py)
 
@@ -430,6 +448,7 @@ while counter <= 12:
 
 ___
 **Exercise 10:**  
+
 Create a script that takes a user's input for the number of elements in a list. Then, ask the user to input each element of the list. Finally, print the elements of the list in reverse order. Use a loop to accomplish this.
 
 <details><summary>Click here for the solution</summary>
@@ -460,6 +479,7 @@ print("Your list in reverse is ", *items, sep = "\n")
 
 ___
 **Exercise 11:**  
+
 Create a script that generates a list of random numbers (between 1 and 100) of a specified length. Then, use conditionals to categorize the numbers into "even" and "odd" groups. Print the resulting lists.  
 
 <details><summary>Click here for the solution</summary>
