--- a/3 Flow Control/3.3 Functions.md
+++ b/3 Flow Control/3.3 Functions.md
@@ -14,6 +14,7 @@ ___
 
 ___
 ## Functions
+
 A function is a reusable block of code which performs operations specified in the function. Functions allow tasks to be broken into smaller pieces and for the code to be reused in different programs.
 
 *[Code](/XXCode%20Snips/3.3.3%20Pascal's%20Fucking%20Triangle.py) for Pascal's Triangle utilising functions*
@@ -24,12 +25,14 @@ There are two types of functions :
 
 ___
 ### Pre-defined functions
+
 There are many pre-defined functions in Python, some common and well-known ones include the [`print()`](/1%20Python%20Basics/1.1%20Hello%20World.md#print-formatting), `sum()`, and `len()` functions.
 Some require importing such as [math or random](/XXCode%20Snips/3.3.1%20Modules%20and%20Libraries.py)
 
 In Python, an in-built function is a pre-defined function that is always available for use, providing common functionality without requiring any imports. 
 
 ### User Defined Functions
+
 The basic structure of a user defined function is:
 * Functions blocks begin `def` followed by the function `name` and parentheses `()`.
 * Input parameters or arguments should be placed within the parentheses.
@@ -145,6 +148,7 @@ StringString
 
 ___
 ## Variables
+
 The input to a function is called a formal parameter.
 
 The scope of a variable is the part of that program where that variable is accessible. A variable that is declared inside a function is called a  local variable. The parameter only exists within the function (i.e. the point where the function starts and stops).
@@ -174,6 +178,7 @@ If there is no `return` statement, the function returns `None`.
 
 ___
 ### Default Arguments
+
 Default arguments can be set for functions. In the example below, in the `isGoodRating()` function, a default thresh hold for a "good" rating is set to 4:
 ```py
 def isGoodRating(rating=4): 
@@ -196,6 +201,7 @@ this album is good its rating is 10
 
 ___
 ## Collections and Functions
+
 When the number of arguments are unknown for a function, They can all be packed into a tuple:
 ```py
 def printAll(*args): # All the arguments are 'packed' into args which is treated like a tuple
@@ -257,6 +263,7 @@ Note how the changes made to the list are not limited to the functions scope. Th
 
 ___
 ## Conditionals and Loops in Functions
+
 The `return()` function is particularly useful if you have any `if` statements in the function, when the output is to be dependent on some condition:
 ```py
 def type_of_album(artist, album, year_released):   
@@ -293,7 +300,8 @@ the man
 abc
 ```
 
-## String Comparison in Functions:  
+## String Comparison in Functions  
+
 Relational operators compare the Unicode values of the characters of the strings from the zeroth index till the end of the string. It then returns a boolean value according to the operator used.
 ```py
 def check_string(text):
@@ -368,6 +376,7 @@ def div(a, b):
 
 ___
 **Exercise 2:**  
+
 Use the function `con` for the following question.
 ```py
 def con(a, b):
@@ -386,6 +395,7 @@ con(2, 2)
 
 ___
 **Exercise 3:**  
+
 Can the `con` function be used to concatenate lists or tuples?
 
 <details><summary>Click here for the solution</summary>
@@ -398,6 +408,7 @@ con(['a', 1], ['b', 1])
 
 ___
 **Exercise 4:**  
+
 Write a function to find total count of word `little` in the given string: 
 `"Mary had a little lamb Little lamb, little lamb Mary had a little lamb.Its fleece was white as snow And everywhere that Mary went Mary went, Mary went Everywhere that Mary went The lamb was sure to go"`
 
