--- a/3 Flow Control/3.4 Objects and Classes.md
+++ b/3 Flow Control/3.4 Objects and Classes.md
@@ -8,9 +8,11 @@ ___
   - [Methods](#methods)
 - [Class Excercises](#class-excercises)
 
-[Link](/XXCode%20Snips/3.4.1%20RedCircle%20Class.py) to full class code
+*[Link](/XXCode%20Snips/3.4.1%20RedCircle%20Class.py) to full class code*
+
 ___
 ## Classes and Objects in Python
+
 Python has many different kinds of data [types](/1%20Python%20Basics/1.2%20Types.md): Integers, Floats, [Strings](/1%20Python%20Basics/1.4%20String%20Operations.md), [Lists](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#Lists), [Dictionaries](/2%20Python%20Data%20Structures/2.3%20Dictionaries.md), Booleans; in Python each is an object. Every object has the following:
 * A type,
 * Internal representation
@@ -22,6 +24,7 @@ A class or type's *methods* are functions that every instance of that class or t
 
 ___
 ### Creating a class
+
 Classes or types can be created in python, complete with their own data attributes and methods. Instances of of a class can then be created. A class is defined by its data attributes.
 
 ___
@@ -64,6 +67,7 @@ Next a special method called a constructor `\__init\_\_`, is used to initialize 
 The actual object is shown below. We include the method `drawCircle` to display the image of a circle. We set the default radius to 3 and the default colour to blue:
 
 ### Instances of a Class - Objects and Attributes
+
 After the class is created, in order to create an object of class circle, a variable is introduced; this will be the name of the object.  
 The object is created using the object construtor, this consists of the name of the class, as well as the parameters. These are the data attributes. 
 
@@ -104,6 +108,7 @@ Will output:
 
 ___
 ### Methods
+
 Methods provde a way to change or interact with an object; they are functions that interact with objects.  
 
 The `dir` command can be used to get a list of an object's methods, many of them are default Python methods. 
@@ -145,10 +150,12 @@ Radius of object of after applying the method add_radius(5): 8
 
 ___
 ## Class Excercises
+
 *Scenario: Car dealership's inventory management system*  
 You are working on a Python program to simulate a car dealership's inventory management system. The system aims to model cars and their attributes accurately.
 
 **Exercise 1:**  
+
 You are tasked with creating a Python program to represent vehicles using a class. Each car should have attributes for maximum speed and mileage. 
 
 <details><summary>Click here for the solution</summary>
@@ -163,6 +170,7 @@ class Vehicle:
 
 ___
 **Exercise 2:**  
+
 Update the class with the default color for all vehicles," white".
 
 <details><summary>Click here for the solution</summary>
@@ -179,6 +187,7 @@ class Vehicle:
 
 ___
 **Exercise 3:**  
+
 Additionally, you need to create methods in the Vehicle class to assign seating capacity to a vehicle. 
 
 <details><summary>Click here for the solution</summary>
@@ -199,6 +208,7 @@ class Vehicle:
 
 ___
 **Exercise 4:**  
+
 Create a method to display all the properties of an object of the class. 
 
 <details><summary>Click here for the solution</summary>
@@ -226,6 +236,7 @@ class Vehicle:
 
 ___
 **Exercise 5:**  
+
 Additionally, you need to create two objects of the Vehicle class object that should have a max speed of 200kph and mileage of 50000kmpl with five seating capacities, and another car object should have a max speed of 180kph and 75000kmpl with four seating capacities.
 
 <details><summary>Click here for the solution</summary>
