Flow Control finished, links updated.

--- a/3 Flow Control/3.5 Exception Handling.md
+++ b/3 Flow Control/3.5 Exception Handling.md
@@ -6,6 +6,8 @@ ___
   - [Try Except](#try-except)
   - [Try Except Specific](#try-except-specific)
   - [Try Except Else and Finally](#try-except-else-and-finally)
+  - [Custom Exception Classes](#custom-exception-classes)
+  - [Logging Exceptions](#logging-exceptions)
 - [Exception Handling Exercises](#exception-handling-exercises)
 
 *[Link](/XXCode%20Snips/3.5.1%20Number%20Guess%20Game.py) to Number Guess Game*  
@@ -52,8 +54,9 @@ try:
     # code to try to execute
 except:
     # code to execute if there is an exception
-    
-# code that will still execute if there is an exception
+    pass # Placeholder for future implementation
+
+# code that will still execute provided the code does not exit or halt if there is an exception
 ```
 
 In the basic example below, the code attempts to divide "1" by a user input number. if the user input is invalid, for example a non-integer, or zero, the code will exit gracefully with an error message.
@@ -148,6 +151,43 @@ else:
 finally:
     print("Processing Complete")
 ```
+
+___
+### Custom Exception Classes
+In Python, custom exception classes can be created by inheriting from Exception. 
+```python
+class MyError(Exception):
+    """Custom exception for specific errors."""
+    pass
+
+# Example of raising the custom exception
+def risky_function(value):
+    if value < 0:
+        raise MyError("Negative values are not allowed!")
+
+try:
+    risky_function(-1)
+except MyError as e:
+    print(f"Caught an error: {e}")
+```
+
+The MyError class doesn't add any functionality beyond Exception, however it allows the raising and catching of specific errors related to an application.  
+
+___
+### Logging Exceptions
+For production code, it's better to use logging instead of `print()` to record exceptions, as logging provides more control and allows saving logs to a file.
+```python
+import logging
+
+logging.basicConfig(filename='app.log', level=logging.ERROR)
+
+try:
+    risky_function(-1)
+except MyError as e:
+    logging.error(f"An error occurred: {e}")
+```
+
+This logs the error message into app.log, making debugging easier without cluttering the console.
 
 ___
 ## Exception Handling Exercises
