Reorganise annd update links

--- a/1 Python Basics/1.1 Hello World.md
+++ b/1 Python Basics/1.1 Hello World.md
@@ -23,7 +23,7 @@ Will output:
 ```
 `Hello World`  
 ```
-[Code](</XXCode Snips/1.1.1 Hello World.py>)
+[Code](</Code Snips/1.1.1 Hello World.py>)
 
 Note it is good practice to comment code:
 
