--- a/3 Flow Control/3.2 Loops.md
+++ b/3 Flow Control/3.2 Loops.md
@@ -14,10 +14,10 @@ ___
 - [Loop Exercises](#loop-exercises)
 
 
-*[Code](/XXCode%20Snips/3.2.2%20Loops%20Practice.py) for loops practice.*  
-*[Code](/XXCode%20Snips/3.2.3%20FizzBuzz.py) for Ye Olde FizzBuzz!*  
-*[Code](/XXCode%20Snips/3.2.4%20Nested%20Loops%20Excercises.py) for nested loops*  
-*[Code](/XXCode%20Snips/3.2.5%20Matrix%20and%20List%20Comprehension.py) for matrix and list* comprehension stuff  
+*[Code](/Code%20Snips/3.2.2%20Loops%20Practice.py) for loops practice.*  
+*[Code](/Code%20Snips/3.2.3%20FizzBuzz.py) for Ye Olde FizzBuzz!*  
+*[Code](/Code%20Snips/3.2.4%20Nested%20Loops%20Excercises.py) for nested loops*  
+*[Code](/Code%20Snips/3.2.5%20Matrix%20and%20List%20Comprehension.py) for matrix and list* comprehension stuff  
 
 ## Range  
 
@@ -430,7 +430,7 @@ ___
 **Exercise 9:**  
 
 Create a script that takes a user's input for a number and prints the multiplication table for that number from 1 to 12. Use a loop to accomplish this.  
-[Code](/XXCode%20Snips/3.2.1%20Multiplication%20Loop.py)
+[Code](/Code%20Snips/3.2.1%20Multiplication%20Loop.py)
 
 <details><summary>Click here for the solution</summary>
 
