--- a/3 Flow Control/3.3 Functions.md
+++ b/3 Flow Control/3.3 Functions.md
@@ -9,7 +9,7 @@ ___
   - [Default Arguments](#default-arguments)
 - [Collections and Functions](#collections-and-functions)
 - [Conditionals and Loops in Functions](#conditionals-and-loops-in-functions)
-- [String Comparison in Functions:](#string-comparison-in-functions)
+- [String Comparison in Functions](#string-comparison-in-functions)
 - [Function Exercises](#function-exercises)
 
 ___
@@ -17,7 +17,7 @@ ___
 
 A function is a reusable block of code which performs operations specified in the function. Functions allow tasks to be broken into smaller pieces and for the code to be reused in different programs.
 
-*[Code](/XXCode%20Snips/3.3.3%20Pascal's%20Fucking%20Triangle.py) for Pascal's Triangle utilising functions*
+*[Code](/Code%20Snips/3.3.3%20Pascal's%20Fucking%20Triangle.py) for Pascal's Triangle utilising functions*
 
 There are two types of functions :
 * **Pre-defined functions** and  
@@ -27,7 +27,7 @@ ___
 ### Pre-defined functions
 
 There are many pre-defined functions in Python, some common and well-known ones include the [`print()`](/1%20Python%20Basics/1.1%20Hello%20World.md#print-formatting), `sum()`, and `len()` functions.
-Some require importing such as [math or random](/XXCode%20Snips/3.3.1%20Modules%20and%20Libraries.py)
+Some require importing such as [math or random](/Code%20Snips/3.3.1%20Modules%20and%20Libraries.py)
 
 In Python, an in-built function is a pre-defined function that is always available for use, providing common functionality without requiring any imports. 
 
@@ -41,7 +41,7 @@ The basic structure of a user defined function is:
 * Documentation can be placed before the body.
 * The statement `return` exits a function, optionally passing back a value.
 
-*[Code](/XXCode%20Snips/3.3.2%20Functions.py) for examples of user-created functions*
+*[Code](/Code%20Snips/3.3.2%20Functions.py) for examples of user-created functions*
 
 Below is an example of a function that adds on to the parameter `a` prints and returns the output as `b`:
 ```py
