--- a/3 Flow Control/3.4 Objects and Classes.md
+++ b/3 Flow Control/3.4 Objects and Classes.md
@@ -8,7 +8,7 @@ ___
   - [Methods](#methods)
 - [Class Excercises](#class-excercises)
 
-*[Link](/XXCode%20Snips/3.4.1%20RedCircle%20Class.py) to full class code*
+*[Link](/Code%20Snips/3.4.1%20RedCircle%20Class.py) to full class code*
 
 ___
 ## Classes and Objects in Python
