--- a/3 Flow Control/3.5 Exception Handling.md
+++ b/3 Flow Control/3.5 Exception Handling.md
@@ -10,8 +10,8 @@ ___
   - [Logging Exceptions](#logging-exceptions)
 - [Exception Handling Exercises](#exception-handling-exercises)
 
-*[Link](/XXCode%20Snips/3.5.1%20Number%20Guess%20Game.py) to Number Guess Game*  
-*[Link](/XXCode%20Snips/3.5.2%20Miss%20Nix%20Multiplictaion%20Game.py) to Nikki's Multiplication Game*
+*[Link](/Code%20Snips/3.5.1%20Number%20Guess%20Game.py) to Number Guess Game*  
+*[Link](/Code%20Snips/3.5.2%20Miss%20Nix%20Multiplictaion%20Game.py) to Nikki's Multiplication Game*
 
 ## Exception Handling
 
