--- a/1 Python Basics/1.3 Expressions and Variables.md
+++ b/1 Python Basics/1.3 Expressions and Variables.md
@@ -67,7 +67,7 @@ name = input("Hi, What's your name? ")
 # Recall the variable
 print ("Hi",name,"it's nice to meet you, I hope you're having a nice day :)")
 ```
-[Code](<../XXCode Snips/1.3.1 Variables from user input.py>)
+[Code](<../Code Snips/1.3.1 Variables from user input.py>)
 </details><p></p>
 
 Will output:  
@@ -114,7 +114,7 @@ else:
 ```
 
 This ensures that age is treated as an integer, allowing numerical comparisons without raising a `TypeError`.  
-[Code](<../XXCode Snips/1.3.2 Type Casting User Input.py>)
+[Code](<../Code Snips/1.3.2 Type Casting User Input.py>)
 </details>
 
 ___
@@ -162,7 +162,7 @@ if number % 2 != 0: # Will return True if the number is odd
 ```
 </details><p></p>
 
-[Code](<../XXCode Snips/1.3.3 Even or Odd.py>)  
+[Code](<../Code Snips/1.3.3 Even or Odd.py>)  
 *See [Loops *Needs update 3.2](/3%20Control%20Flow/3.2%20Loops.md) for loop information.*  
 
 ___
@@ -252,7 +252,7 @@ print ("Difference is: ", subtract_result)
 print ("Product is: ", product_result)
 print ("Division is: ", division_result)
 ```
-[Code](<../XXCode Snips/1.3.4 Numerical Operations.py>) 
+[Code](<../Code Snips/1.3.4 Numerical Operations.py>) 
 </details><p></p>
 
 **Exercise 2:**  
@@ -277,7 +277,7 @@ farenheit = (9/5) * float_temp + 32
 print (temp, degree_sign, "C Is " ,farenheit ,degree_sign,"F")
 
 ```
-[Code](<../XXCode Snips/1.3.5 Celsius to Farenheit.py>) 
+[Code](<../Code Snips/1.3.5 Celsius to Farenheit.py>) 
 </details>
 
 
