--- a/3 Flow Control/3.1 Conditions and Branching.md
+++ b/3 Flow Control/3.1 Conditions and Branching.md
@@ -118,7 +118,7 @@ True
 ### Branching
 
 Branching allows different operations to be performed depending on how a condition statement is evaluated using constructs like `if`, `elif`, and `else` to execute code selectively.  
-This is demonstrated in the [code](/XXCode%20Snips/1.3.3%20Even%20or%20Odd.py) below:
+This is demonstrated in the [code](/Code%20Snips/1.3.3%20Even%20or%20Odd.py) below:
 ```py
 ## Even or odd
 # Request input (and check it's an integer)
