--- a/4 Working with Data in Python/4.1 Reading files with open.md
+++ b/4 Working with Data in Python/4.1 Reading files with open.md
@@ -210,6 +210,11 @@ FileasList[2]
 <p>Congratulations, you have completed your first lesson and hands-on lab in Python.
 <hr>
 
+
+**Task 13: File Handling**  
+Write a script that reads the contents of a text file, counts the occurrences of each word, and prints the word frequencies. You can use the text of a short story or any text file for testing.  
+___
+
 ## Author
 
 <a href="https://www.linkedin.com/in/joseph-s-50398b136/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkPY0101ENSkillsNetwork19487395-2021-01-01" target="_blank">Joseph Santarcangelo</a>
