--- a/4 Working with Data in Python/4.3 Loading data with Pandas.md
+++ b/4 Working with Data in Python/4.3 Loading data with Pandas.md
@@ -73,7 +73,7 @@ After completing this lab you will be able to:
 <div class="alert alert-block alert-info" style="margin-top: 20px">
     <ul>
         <li><a href="#About-the-Dataset">About the Dataset</a></li>
-        <li><a href="#Introduction-of-Pandas">Introduction of <code>Pandas</code></a></li>
+        <li><a href="#Introduction-of-Pandas">Introduction of `Pandas`</a></li>
         <li><a href="#Viewing-Data-and-Accessing-Data">Viewing Data and Accessing Data</a></li>
         <li><a href="#Quiz-on-DataFrame">Quiz on DataFrame</a></li>
     </ul>
@@ -215,7 +215,7 @@ You can see the dataset here:
 
 <hr>
 
-## Introduction of <code>Pandas</code>
+## Introduction of `Pandas`
 
 # Dependency needed to install file 
 
@@ -228,7 +228,7 @@ await piplite.install(['xlrd','openpyxl'])
 # Import required library
 
 import pandas as pd
-After the import command, we now have access to a large number of pre-built classes and functions. This assumes the library is installed; in our lab environment all the necessary libraries are installed. One way pandas allows you to work with data is a dataframe. Let's go through the process to go from a comma separated values (<b>.csv</b>) file to a dataframe. This variable <code>csv_path</code> stores the path of the <b>.csv</b>, that is  used as an argument to the <code>read_csv</code> function. The result is stored in the object <code>df</code>, this is a common short form used for a variable referring to a Pandas dataframe.
+After the import command, we now have access to a large number of pre-built classes and functions. This assumes the library is installed; in our lab environment all the necessary libraries are installed. One way pandas allows you to work with data is a dataframe. Let's go through the process to go from a comma separated values (<b>.csv</b>) file to a dataframe. This variable `csv_path` stores the path of the <b>.csv</b>, that is  used as an argument to the `read_csv` function. The result is stored in the object `df`, this is a common short form used for a variable referring to a Pandas dataframe.
 
 # Read data from CSV file
 
@@ -253,12 +253,12 @@ df = pd.read_csv("TopSellingAlbums.csv")
 
 #filename = "https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%204/data/TopSellingAlbums.csv"
 #df = pd.read_csv(filename)
-We can use the method <code>head()</code> to examine the first five rows of a dataframe:
+We can use the method `head()` to examine the first five rows of a dataframe:
 
 # Print first five rows of the dataframe
 
 df.head()
-We use the path of the excel file and the function <code>read_excel</code>. The result is a data frame as before:
+We use the path of the excel file and the function `read_excel`. The result is a data frame as before:
 
 # Read data from Excel File and print the first five rows
 
@@ -298,7 +298,7 @@ You can also get a column as a dataframe. For example, we can assign the column 
 
 x = df[['Artist']]
 type(x)
-You can do the same thing for multiple columns; we just put the dataframe name, in this case, <code>df</code>, and the name of the multiple column headers enclosed in double brackets. The result is a new dataframe comprised of the specified columns:
+You can do the same thing for multiple columns; we just put the dataframe name, in this case, `df`, and the name of the multiple column headers enclosed in double brackets. The result is a new dataframe comprised of the specified columns:
 
 # Access to multiple columns
 
@@ -308,7 +308,7 @@ The process is shown in the figure:
 
 <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%204/images/DataEgTwo.png" width="1100">
 
-One way to access unique elements is the <code>iloc</code> method, where you can access the 1st row and the 1st column as follows:
+One way to access unique elements is the `iloc` method, where you can access the 1st row and the 1st column as follows:
 
 # Access the value on the first row and the first column
 
@@ -362,13 +362,13 @@ df.loc[0:2, 'Artist':'Released']
 
 ## Quiz on DataFrame
 
-Use a variable <code>q</code> to store the column <b>Rating</b> as a dataframe
+Use a variable `q` to store the column <b>Rating</b> as a dataframe
 
 # Write your code below and press Shift+Enter to execute
 
 <details><summary>Click here for the solution</summary>
 
-```python
+``py
 q = df[['Rating']]
 q
     
@@ -376,13 +376,13 @@ q
 
 </details>
 
-Assign the variable <code>q</code> to the dataframe that is made up of the column <b>Released</b> and <b>Artist</b>:
+Assign the variable `q` to the dataframe that is made up of the column <b>Released</b> and <b>Artist</b>:
 
 # Write your code below and press Shift+Enter to execute
 
 <details><summary>Click here for the solution</summary>
 
-```python
+``py
 q = df[['Released', 'Artist']]
 q
     
@@ -390,27 +390,27 @@ q
 
 </details>
 
-Access the 2nd row and the 3rd column of <code>df</code>:
+Access the 2nd row and the 3rd column of `df`:
 
 # Write your code below and press Shift+Enter to execute
 
 <details><summary>Click here for the solution</summary>
 
-```python
+``py
 df.iloc[1, 2]
     
 ```
 
 </details>
 
-Use the following list to convert the dataframe index <code>df</code> to characters and assign it to <code>df_new</code>; find the element corresponding to the row index <code>a</code> and column  <code>'Artist'</code>. Then select the rows <code>a</code> through <code>d</code> for the column  <code>'Artist'</code>
+Use the following list to convert the dataframe index `df` to characters and assign it to `df_new`; find the element corresponding to the row index `a` and column  `'Artist'`. Then select the rows `a` through `d` for the column  `'Artist'`
 
 new_index=['a','b','c','d','e','f','g','h']
 
 
 <details><summary>Click here for the solution</summary>
 
-```python
+``py
 df_new=df
 df_new.index=new_index
 df_new.loc['a', 'Artist']
