--- a/4 Working with Data in Python/4.2 Writing files with open.md
+++ b/4 Working with Data in Python/4.2 Writing files with open.md
@@ -32,7 +32,7 @@ After completing this lab you will be able to:
 
 <h2 id="write">Writing Files</h2>
 
- We can open a file object using the method <code>write()</code> to save the text file to a list. To write to a file, the mode argument must be set to **w**. Let’s write a file **Example2.txt** with the line: **“This is line A”**
+ We can open a file object using the method `write()` to save the text file to a list. To write to a file, the mode argument must be set to **w**. Let’s write a file **Example2.txt** with the line: **“This is line A”**
 
 # Write line to file
 exmp2 = '/Example2.txt'
@@ -51,7 +51,7 @@ We can write multiple lines:
 with open(exmp2, 'w') as writefile:
     writefile.write("This is line A\n")
     writefile.write("This is line B\n")
-The method <code>.write()</code> works similarly to the method <code>.readline()</code>, except instead of reading a new line it writes a new line. The process is illustrated in the figure. The different colour coding of the grid represents a new line added to the file after each method call.
+The method `.write()` works similarly to the method `.readline()`, except instead of reading a new line it writes a new line. The process is illustrated in the figure. The different colour coding of the grid represents a new line added to the file after each method call.
 
 <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%204/images/WriteLine.png" width="500">
 
@@ -116,15 +116,15 @@ Let's try out the __a+__ mode:
 with open('/Example2.txt', 'a+') as testwritefile:
     testwritefile.write("This is line E\n")
     print(testwritefile.read())
-There were no errors but <code>read()</code> also did not output anything. This is because of our location in the file.
+There were no errors but `read()` also did not output anything. This is because of our location in the file.
 
-Most of the file methods we've looked at work in a certain location in the file. <code>.write() </code> writes at a certain location in the file. <code>.read()</code> reads at a certain location in the file and so on. You can think of this as moving your pointer around in the notepad to make changes at a specific location.
+Most of the file methods we've looked at work in a certain location in the file. `.write() ` writes at a certain location in the file. `.read()` reads at a certain location in the file and so on. You can think of this as moving your pointer around in the notepad to make changes at a specific location.
 
 Opening the file in **w** is akin to opening the .txt file, moving your cursor to the beginning of the text file, writing new text and deleting everything that follows.
 Whereas opening the file in **a** is similar to opening the .txt file, moving your cursor to the very end and then adding the new pieces of text. <br>
 It is often very useful to know where the 'cursor' is in a file and be able to control it. The following methods allow us to do precisely this -
-- <code>.tell()</code> - returns the current position in bytes
-- <code>.seek(offset,from)</code> - changes the position by 'offset' bytes with respect to 'from'. From can take the value of 0,1,2 corresponding to the beginning, relative to current position and end
+- `.tell()` - returns the current position in bytes
+- `.seek(offset,from)` - changes the position by 'offset' bytes with respect to 'from'. From can take the value of 0,1,2 corresponding to the beginning, relative to current position and end
 
 Now lets revisit **a+**
 
@@ -148,8 +148,8 @@ with open('/Example2.txt', 'a+') as testwritefile:
     
     print("Location after read: {}".format(testwritefile.tell()) )
 Finally, a note on the difference between **w+** and **r+**. Both of these modes allow access to read and write methods; however, opening a file in **w+** overwrites it and deletes all pre-existing data. <br>
-To work with a file on existing data, use **r+** and **a+**. While using **r+**, it can be useful to add a <code>.truncate()</code> method at the end of your data. This will reduce the file to your data and delete everything that follows. <br>
-In the following code block, Run the code as it is first and then run it with the <code>.truncate()</code>.
+To work with a file on existing data, use **r+** and **a+**. While using **r+**, it can be useful to add a `.truncate()` method at the end of your data. This will reduce the file to your data and delete everything that follows. <br>
+In the following code block, Run the code as it is first and then run it with the `.truncate()`.
 
 with open('/Example2.txt', 'r+') as testwritefile:
     data = testwritefile.readlines()
@@ -322,7 +322,7 @@ print ("{}".format(testMsg(passed)))
 
 <details><summary>Click here for the solution</summary>
 
-```python
+``py
 def cleanFiles(currentMem,exMem):
     with open(currentMem,'r+') as writeFile: 
         with open(exMem,'a+') as appendFile:
