--- a/3 Flow Control/3.4 Objects and Classes.md
+++ b/3 Flow Control/3.4 Objects and Classes.md
@@ -129,7 +129,7 @@ using the `import matplotlib.pyplot as plt` and the `drawCircle()` method, the c
 RedCircle.drawCircle()
 ```
 Will output:  
-![matplotlib print of RedCircle](<3.4 RedCircle.png>)
+![matplotlib print of RedCircle](</Resources/3.4 RedCircle.png>)
 *Matplotlib display of Redcircle*
 
 The radius of the circle can be changed by applying the method `add_radius()`. The example below increases the radius by 2 and then by 5:
