--- a/1 Python Basics/1.2 Types.md
+++ b/1 Python Basics/1.2 Types.md
@@ -103,7 +103,7 @@ Similarly a `1`/`0` cast to boolean will result in `True`/`False` respectively.
 
 ___
 ### Advanced Type Casting
-There are more advanced ways to do type casting, for example, taking an [input](1.3%20Expressions%20and%20Variables.md#variables-from-user-input) (which is always a string), and casting it to an integer; however the required input type should be made clear to the user and [exception handling *Needs Update 3.5](/x3%20Python%20Programming%20Fundamentals/x3.5%20Exception%20Handling.md) is a very good idea.  
+There are more advanced ways to do type casting, for example, taking an [input](1.3%20Expressions%20and%20Variables.md#variables-from-user-input) (which is always a string), and casting it to an integer; however the required input type should be made clear to the user and [exception handling](/3%20Flow%20Control/3.5%20Exception%20Handling.md#exception-handling) is a very good idea.  
 <details><summary>Cast User Input to Integer</summary>
 
 ```py
