--- a/2 Python Data Structures/2.2 Sets.md
+++ b/2 Python Data Structures/2.2 Sets.md
@@ -68,7 +68,7 @@ Will output:
 ```
 
 To add more than one element to the set at the same time, the `update()` method should be used.
-It should be noted that because sets cannot contain duplicates, adding the same item multiple times. Also of note is that `True`/`False` equate to `1`/`0` so won't be duplicated (*See [comparability](/1%20Python%20Basics/1.2%20Types.md#comparability)*). When determining uniqueness sets take the value of an element and ignore type.
+It should be noted that because sets cannot contain duplicates, adding the same item multiple times will have no additional effects after the first item. Also of note is that `True`/`False` equate to `1`/`0` so won't be duplicated (*See [comparability](/1%20Python%20Basics/1.2%20Types.md#comparability)*). When determining uniqueness sets take the value of an element and ignore type.
 ```py
 set_1 = {1, 2, "apple", 3.5}
 print(set_1)
@@ -260,8 +260,8 @@ Will output:
 {7, 'banana'}
 ```
 
+___
 ### Union
-
 `union()` is very similar to `update()`; it will join two sets keeping only the unique elements of each. The difference is that `update()` will update a set in place, whereas `union()` will create a new set, without modifying the original. This joining of sets can be done with the `union()` method, or using the `|` operator:
 ```py
 set_1 = {1, 2, "apple", 3.5}
