--- a/4 Working with Data in Python/4.1 Reading files with open.md
+++ b/4 Working with Data in Python/4.1 Reading files with open.md
@@ -1,187 +1,199 @@
+*[Back to index](</readme.md>)*
+___
+## Contents
+- [Contents](#contents)
+- [Reading Files](#reading-files)
+  - [Reading With with open()](#reading-with-with-open)
+  - [Reading Partial File Content](#reading-partial-file-content)
+  - [Read Lines With Loop](#read-lines-with-loop)
+- [File Reading Exercises](#file-reading-exercises)
 
 ___
 ## Reading Files
+One way to read or write a file in Python is to use the built-in `open` function. The `open` function provides a **File object** that contains the methods and attributes you need in order to read, save, and manipulate the file.  
 
-One way to read or write a file in Python is to use the built-in `open` function. The `open` function provides a **File object** that contains the methods and attributes you need in order to read, save, and manipulate the file. In this notebook, we will only cover **.txt** files. The first parameter you need is the file path and the file name. An example is shown as follow:
+The first parameter you need is the file path and the file name. The mode argument is optional and the default value is **r**.
+* **r**: Read mode for reading files
+* **w**: Write mode for writing files
 
-<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%204/images/ReadOpen.png" width="500">
-
-The mode argument is optional and the default value is **r**. In this notebook we only cover two modes:
-
-<ul>
-    <li>**r**: Read mode for reading files </li>
-    <li>**w**: Write mode for writing files</li>
-</ul>
-
-For the next example, we will use the text file **Example1.txt**. The file is shown as follows:
-
-<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%204/images/ReadFile.png" width="100">
-
-We read the file:
 ```py
-# Read the Example1.txt
-example1 = "example1.txt"
+#File object               File Name
+#____                    ___________________
+ file = open("/Resources/fileToBeHandled.txt" ,"r")
+#             _________                        ___
+#             File Path                        Mode
+```
+
+For the following examples this [file](/Resources/fileToBeHandled.txt) will be used.
+
+Below are common commands used to open a file and view various attributes:
+```py
+# Read fileToBeHandled.txt
+example1 = "fileToBeHandled.txt"
 file1 = open(example1, "r")
-```
-
-We can view the attributes of the file.
-
-The name of the file:
-```py
+ 
 # Print the path of file
-
-file1.name
-```
-
-The mode the file object is in:
-```py
+print(file1.name)
+ 
 # Print the mode of file, either 'r' or 'w'
+print(file1.mode)
 
-file1.mode
-```
-
-We can read the file and assign it to a variable :
-```py
-# Read the file
-
+# We can read the file and assign it to a variable
 FileContent = file1.read()
-FileContent
-```
-
-The **/n** means that there is a new line.
-
-We can print the file:
-```py
-# Print the file with '\n' as a new line
-
+ 
+# Print the file using the new variable
 print(FileContent)
-```
 
-The file is of type string:
-```py
-# Type of file content
+# Find the type of file content
+print(type(FileContent))
 
-type(FileContent)
-```
-
-It is very important that the file is closed in the end. This frees up resources and ensures consistency across different python versions.
-```py
 # Close file after finish
-
 file1.close()
 ```
 
-## Reading With with open()
+Will output:
+```
+fileToBeHandled.txt
+r
+The first line of text.1213
+Line 2
+Line 3
+Line 4
+<class 'str'>
+```
 
-Using the `with` statement is better practice, it automatically closes the file even if the code encounters an exception. The code will run everything in the indent block then close the file object.
+It is important to close files when they are no longer in use, this frees up resources and ensures consistency across different python versions.
+
+___
+### Reading With with open()
+It is better practice to Read files using the `with` statement, it automatically closes the file even if the code encounters an exception. The code will run everything in the indent block then close the file object.
+
 ```py
 # Open file using with
-
-with open(example1, "r") as file1:
+with open("fileToBeHandled.txt", "r") as file1:
     FileContent = file1.read()
     print(FileContent)
+
+# Verify that the file is closed
+print(file1.closed)
 ```
 
-The file object is closed, you can verify it by running the following cell:
-```py
-# Verify if the file is closed
-
-file1.closed
+Will output:
+```
+The first line of text.1213
+Line 2
+Line 3
+Line 4
+True
 ```
 
-We can see the info in the file:
-```py
-# See the content of file
+### Reading Partial File Content
+It is not necessary to read an entire file, instead certain characters or lines can be selected by adding them as parameters to the `.read()` method. Calling the read method multiple times will read from the last point.
 
-print(FileContent)
-```
-
-The syntax is a little confusing as the file object is after the `as` statement. We also don’t explicitly close the file. Therefore we summarize the steps in a figure:
-
-<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%204/images/ReadWith.png" width="500">
-
-## Reading Partial File Content
-We don’t have to read the entire file, for example, we can read the first 4 characters by entering three as a parameter to the method **.read()**:
-```py
-# Read first four characters
-
-with open(example1, "r") as file1:
-    print(file1.read(4))
-```
-
-Once the method `.read(4)` is called the first 4 characters are called. If we call the method again, the next 4 characters are called. The output for the following cell will demonstrate the process for different inputs to the method `read()`:
 ```py
 # Read certain amount of characters
-
-with open(example1, "r") as file1:
+with open("fileToBeHandled.txt", "r") as file1:
     print(file1.read(4))
     print(file1.read(4))
     print(file1.read(7))
     print(file1.read(15))
 ```
 
-The process is illustrated in the below figure, and each color represents the part of the file read after the method `read()` is called:
-
-<img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0101EN-SkillsNetwork/labs/Module%204/images/read.png" width="500">
-
-Here is an example using the same file, but instead we read 16, 5, and then 9 characters at a time:
-```py
-# Read certain amount of characters
-
-with open(example1, "r") as file1:
-    print(file1.read(16))
-    print(file1.read(5))
-    print(file1.read(9))
+Will output:
+```
+The 
+firs
+t line
+of text.1213
 ```
 
-We can also read one line of the file at a time using the method `readline()`:
+the `readline()` method works similarly but will read each line, or read a specifed line. Unlike ` read()`, ` readline()` can only read one line at most.
 ```py
 # Read one line
-
-with open(example1, "r") as file1:
+with open("fileToBeHandled.txt", "r") as file1:
     print("first line: " + file1.readline())
+    print(file1.readline(3)) # does not read past the end of line
+    print(file1.read(5)) # Returns the next 20 chars
 ```
 
-We can also pass an argument to ` readline() ` to specify the number of charecters we want to read. However, unlike ` read()`, ` readline()` can only read one line at most.
-```py
-with open(example1, "r") as file1:
-    print(file1.readline(20)) # does not read past the end of line
-    print(file1.read(20)) # Returns the next 20 chars
+Will output:
 ```
+first line: The first line of text.1213
 
-We can use a loop to iterate through each line:
+Lin
+e 2
+L
+```
+### Read Lines With Loop
+[Loops](/3%20Flow%20Control/3.2%20Loops.md) can be used to loop through a file and read each line.
 ```py
 # Iterate through the lines
-
-with open(example1,"r") as file1:
+with open("fileToBeHandled.txt", "r") as file1:
         i = 0;
         for line in file1:
             print("Iteration", str(i), ": ", line)
             i = i + 1
 ```
 
-We can use the method `readlines()` to save the text file to a list:
-```py
-# Read all lines and save as a list
+Will output:
+```
+Iteration 0 :  The first line of text.1213
 
-with open(example1, "r") as file1:
-    FileasList = file1.readlines()
+Iteration 1 :  Line 2
+
+Iteration 2 :  Line 3
+
+Iteration 3 :  Line 4
 ```
 
-Each element of the list corresponds to a line of text:
+The method `readlines()` can be used to save the text file to a list. Each element of the list corresponds to a line of text.
 ```py
+# Read all lines and save as a list
+with open("fileToBeHandled.txt", "r") as file1:
+    FileasList = file1.readlines()
+
 # Print the first line
-
 FileasList[0]
+
 # Print the second line
-
 FileasList[1]
-# Print the third line
 
+# Print the third line
 FileasList[2]
 ```
 
+Will output:
+```
+The first line of text.1213
 
-**Task 13: File Handling**  
-Write a script that reads the contents of a text file, counts the occurrences of each word, and prints the word frequencies. You can use the text of a short story or any text file for testing.  
+Line 2
+
+Line 3
+
+```
+
 ___
+## File Reading Exercises
+
+**Exercise 1:**  
+
+Write a script that reads the contents of a text file, counts the occurrences of each word, and prints the word frequencies. You can use the text of a short story or any text file for testing.
+
+<details><summary>Click here for the solution</summary>
+
+```py
+import re
+
+with open ("fileToBeHandled.txt") as file:
+    new = (file.split(" "))
+    for i in new:
+        count = re.findall(r"i", file)
+        print(f"Word: {i}, Count: {count}
+
+```
+
+Will output:
+```
+
+```
+</details>
