--- a/4 Working with Data in Python/4.1 Reading files with open.md
+++ b/4 Working with Data in Python/4.1 Reading files with open.md
@@ -182,18 +182,48 @@ Write a script that reads the contents of a text file, counts the occurrences of
 <details><summary>Click here for the solution</summary>
 
 ```py
-import re
+from collections import Counter
 
-with open ("fileToBeHandled.txt") as file:
-    new = (file.split(" "))
-    for i in new:
-        count = re.findall(r"i", file)
-        print(f"Word: {i}, Count: {count}
+words = []
+with open("fileToBeHandled.txt", "r") as file1:
+    for line in file1:
+        for word in line.split():
+            words.append(word)
 
+word_counts = Counter(words)
+print("First method using Collections module:\n",word_counts, "\n")
+
+# Alternatively:
+word_counts = {}
+
+with open("fileToBeHandled.txt", "r") as file1:
+    for line in file1:
+        for word in line.split():
+            word_counts[word] = word_counts.get(word, 0) +1
+
+print("Second method using dictionary:\n", word_counts, "\n") # One line output, OR:
+print("Print by looping through dictionary: ")
+for x, y in word_counts.items():
+    print(f"Word: {x}, Count: {y}")
 ```
 
 Will output:
 ```
+First method using Collections module:
+ Counter({'Line': 3, 'The': 1, 'first': 1, 'line': 1, 'of': 1, 'text.1213': 1, '2': 1, '3': 1, '4': 1}) 
 
+Second method using dictionary:
+ {'The': 1, 'first': 1, 'line': 1, 'of': 1, 'text.1213': 1, 'Line': 3, '2': 1, '3': 1, '4': 1}
+
+Print by looping through dictionary:
+Word: The, Count: 1
+Word: first, Count: 1
+Word: line, Count: 1
+Word: of, Count: 1
+Word: text.1213, Count: 1
+Word: Line, Count: 3
+Word: 2, Count: 1
+Word: 3, Count: 1
+Word: 4, Count: 1
 ```
 </details>
